<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
  <modelVersion>4.0.0</modelVersion>
  <groupId>com.bensler</groupId>
  <artifactId>decaf-superpom</artifactId>
  <version>0.1</version>
  <packaging>pom</packaging>
  <name>Decaf Super POM</name>
  <description>Multi-module POM of Decaf modules</description>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>24</maven.compiler.release>
  </properties>

  <modules>
    <module>decaf-testutil</module>
    <module>decaf-util</module>
    <module>decaf-swing</module>
  </modules>

</project>
